# Gstreamer

./: README.md  rtsp_decoder.cpp
Clean code/: Compare.txt  Gstreamer_original.cpp  Stream.cpp  Stream.hpp  Types.hpp  main.cpp  rtsp_decode.hpp  rtsp_decoder  rtsp_decoder.cpp
FRVT 11/11/: README.md
FRVT 11/11/doc/: version.txt
FRVT 11/11/input/: match_multiperson.txt
FRVT 11/11/src/nullImpl/: CMakeLists.txt  FaceDetection.cpp  FaceDetection.h  FaceVectorize.cpp  FaceVectorize.h  FaceWarp.cpp  FaceWarp.h  nullimplfrvt11.cpp  nullimplfrvt11.h
FRVT 11/11/src/testdriver/: CMakeLists.txt  validate11.cpp
Pipeline_manipulation/: Appsink_eg_1.cpp  Appsrc_eg_v2.cpp  Appsrc_example.cpp  Gstreamer_Youtube.txt  appsink.cpp  appsrc.cpp  note.txt  sample_process.cpp
docker/: Dockerfile  build_opencv.sh  docker-compose.yml  requirements.txt  t.txt
gst/: CMakeLists.txt  Take_note.txt
gst/data/: config
gst/data/json/: yolov8.json
gst/include/common/: BlockingQueue.hpp  Logger.hpp
gst/include/define/: JsonTypes.hpp  Types.hpp
gst/include/model/: AIModel.hpp  AbstractRuntime.hpp  RuntimeFactory.hpp
gst/include/model/onnx/: ORTModel.hpp  ORTYoloV8.hpp
gst/include/stream/: GstDecode.hpp  GstOverlay.hpp  GstRestream.hpp  Stream.hpp  StreamManager.hpp
gst/source/: main.cpp
gst/source/model/: AIModel.cpp  RuntimeFactory.cpp
gst/source/stream/: GstDecode.cpp  GstOverlay.cpp  GstRestream.cpp  Stream.cpp  StreamManager.cpp
gst/test/: test_model.cpp  test_stream.cpp
